Change paths to ensure visibility upon deployment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ body {
     padding: 0;
     margin: 0;
     overflow-x: hidden;
-    background: url(/assets/images/kessingland.jpg) no-repeat center center fixed;
+    background: url(../images/kessingland.jpg) no-repeat center center fixed;
     background-size: cover;
 }
 
@@ -137,9 +137,19 @@ nav.navbar.nav-scrolled {
             transform: scale(1.5);
         }
 
+        span.unselected-overlay {
+            position: absolute;
+            z-index: 100;
+            width: 100%;
+            font-size: 3rem;
+        }
+
+        .span.unselected-overlay p {
+            color: #2d2f39;
+        }
+
         .map-location:hover {
             background-color: #60be86;
-            color: #f5f5f5;
             transform: scale(1.05);
         }
         
@@ -321,6 +331,16 @@ and (min-width: 320px) and (max-width: 375px) {
         justify-content: center;
     }
 
+    span.unselected-overlay {
+        position: relative;
+        width: 100%;
+        font-size: 1rem;
+    }
+
+    span.unselected-overlay p {
+        padding: 1em;
+    }
+
     .footer-contact {
         text-align: center;
         margin-bottom: 40px;
@@ -348,6 +368,16 @@ and (min-width: 375px) and (max-width: 768px) {
 
     .activity p {
         font-size: 0.9rem;
+    }
+
+    span.unselected-overlay {
+        position: relative;
+        width: 100%;
+        font-size: 1.3rem;
+    }
+
+    span.unselected-overlay p {
+        padding: 1em;
     }
 
     .contact-wrapper {
